--- a/src/Pages/Create/Create.css
+++ b/src/Pages/Create/Create.css
@@ -11,7 +11,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 40vh;
+    min-height: 90vh;
 }
 
 .title {
@@ -163,4 +163,22 @@ button {
     background-clip: padding-box;
     border: 1px solid #d4d4d4;
     border-radius: 0;
+    width: 30vw;
+    box-sizing: border-box;
+}
+
+.select-form-secondary {
+    display: block;
+    width: 100%;
+    height: calc(1.8em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.8;
+    color: #525252;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #d4d4d4;
+    border-radius: 0;
+    box-sizing: border-box;
 }
