--- a/src/Pages/Create/Create.css
+++ b/src/Pages/Create/Create.css
@@ -3,10 +3,6 @@ h1 {
     justify-content: center;
 }
 
-h2 {
-    text-align: center;
-}
-
 .content {
     display: flex;
     flex-direction: column;
@@ -71,11 +67,6 @@ a.no-hover {
     background-color: #fff;
     border-color: #d4d4d4;
 }
-/* 
-.login-form {
-    display: flex;
-    flex-direction: column;
-} */
 
 label {
     text-align: left;
@@ -116,7 +107,6 @@ button {
 .form-group{
     display: flex;
     align-items: flex-start;
-    margin-bottom: 1rem;
 }
 
 .form-check {
@@ -163,22 +153,17 @@ button {
     background-clip: padding-box;
     border: 1px solid #d4d4d4;
     border-radius: 0;
-    width: 30vw;
     box-sizing: border-box;
 }
 
-.select-form-secondary {
-    display: block;
-    width: 100%;
-    height: calc(1.8em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.8;
-    color: #525252;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #d4d4d4;
-    border-radius: 0;
-    box-sizing: border-box;
+.select-form-sizing {
+    width: 35vw;
+}
+
+.select-dropdown {
+    padding-top: 10px;
+}
+
+.service-style {
+    padding-bottom: 10px;
 }
